# create-gear-app

./: .env  .env.example  .eslintrc.json  .gitignore  README.md  config-overrides.js  craco.config.js  package-lock.json  package.json  tsconfig.json
contract/: .binpath  Cargo.toml  buildwasm.js  buildwasm.ts  parseTypes.js
contract/gear-app/src/: lib.rs
contract/src/: lib.rs
public/: index.html  manifest.json
src/: .prettierrc  ApiServise.js  App.css  App.js  App.tsx  config.js  config.ts  const.ts  consts.ts  global.d.ts  index.css  index.js  index.tsx  utils.js  utils.ts
src/api/: api.js  apiContext.js  initApi.ts
src/components/Accordion/: Accordion.scss  Accordion.tsx
src/components/AccountList/: AccountList.tsx  index.js  styles.js
src/components/AlertTemplate/: AlertTemplate.tsx
src/components/Claim/: Claim.scss  Claim.tsx
src/components/Form/: index.js  styles.js
src/components/Guesbook/: Guesbook.tsx
src/components/Guestbook/: Guestbook.tsx
src/components/Loader/: Loader.scss  Loader.tsx  index.js  styles.js
src/components/Modal/: Modal.scss  Modal.tsx  index.js  styles.js
src/components/Ripple/: Ripple.scss  Ripple.tsx
src/components/SignIn/: index.js  styles.js
src/components/SingIn/: index.js  styles.js
src/components/Wallet/: Wallet.scss  Wallet.tsx  hooks.ts  index.js  utils.ts
src/context/: ApiContext.js  ApiContext.tsx  ApiPromiseContext.tsx  ModalContext.tsx  UserContext.js  UserContext.tsx
src/hooks/: index.ts
src/service/: ApiRequestService.js  SendMessage.ts
src/types/: message.ts  user.ts
(+37 files in other folders)
