[package]
name = "guestbook"
version = "0.1.0"
authors = ["Gear Technologies"]
edition = "2018"
license = "GPL-3.0"

resolver = "2"

[lib]
crate-type = ["cdylib"]

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear", features = ["debug"] }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.1.2", default-features = false, features = ["derive"] }
primitive-types = { version = "0.11.1", default-features = false, features = ["scale-info"]}


[profile.release]
lto = true
opt-level = 's'

[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear.git"}