[package]
name = "guestbook"
version = "0.1.0"
authors = ["Gear Technologies"]
edition = "2021"
license = "GPL-3.0"

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear", features = ["debug"] }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.1.2", default-features = false, features = ["derive"] }
primitive-types = { version = "0.11.1", default-features = false, features = ["scale-info"]}

[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear.git"}

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git" }